# OpCl

./: .gitignore  CMakeLists.txt  CMakeSettings.json  NetworkAddress.cpp  NetworkAddress.h  OpCl.cpp  OpenThenClose.h  Protocol.cpp  Protocol.h  SocketClient.cpp  SocketClient.h  SocketMessage.cpp  SocketMessage.h
doc/: ClientSampleCode.cpp  ClientSampleCode.h  protocol.txt
